@startuml diagram
' Configurações visuais para deixar o diagrama mais limpo e profissional
hide circle
skinparam linetype ortho
skinparam shadowing false
skinparam class {
    BackgroundColor White
    ArrowColor #2688d4
    BorderColor #2688d4
}

' --- Definição das Classes (Tabelas + Métodos) ---

class "Usuario" as usuario {
  - id_usuario : int
  - nome_completo : String
  - email : String
  - senha : String
  ==
  + autenticarUsuario(-) : boolean
  + visualizarPerfil(-) : Usuario
  + atualizarPerfil(-) : void
  + recuperarSenha(-) : void
  + alterarSenha(-) : void
  + cadastrarUsuario(-) : void
}

class "Estudante" as estudante {
  --
  - matricula : String
  - curso : String
  ==
  + atualizarPreferencias(dados) : void
}

class "Administrador" as admin {
  --
  - cargo_setor : String
  ==
  + cadastrarAdministradorInterno() : void
  + gerenciarSolicitacoes() : void
  + visualizarRelatorios() : void
  + gerenciarUsuarios() : void
  + gerenciarHorarios() : void
}

class "Servico" as servico {
  - id_servico : int <<PK>>
  --
  - nome_servico : String
  - categoria_servico : Enum ('Impressao', 'Plotagem', 'Digitalizacao', 'Produto')
  - preco_unitario : double
  - disponivel : boolean
  ==
  + listarServicosAtivos() : List<Servico>
  + cadastrarServico(dadosServico) : void
  + atualizarDisponibilidade(idServico, status) : void
}

class "Pedido" as pedido {
  - id_pedido : int <<PK>>
  --
  - id_usuario : int <<FK>>
  - data_hora : Datetime
  - status_fila : StatusPedido
  - arquivo_url : String
  - nome_arquivo_original : String
  - tamanho_arquivo_mb : double
  - total_paginas_arquivo : int
  - valor_total : double
  ==
  ' Métodos de Regra de Negócio e Fila (Originais)
  + criarPedido() : Pedido
  + adicionarItemAoPedido() : void
  + fazerUploadArquivo() : String
  + calcularValorTotal() : double
  + confirmarPedido() : void
  + atualizarStatusPedido() : void
  + listarFilaDePedidos() : List<Pedido>
  + cancelarPedido() : void
  + estimarTempoFila() : String
  + obterPosicaoFila() : int
  
  ' Métodos Sincronizados com PedidoService.java (Novos)
  + obterEstatisticasUsuario(idUsuario) : EstatisticasPedidoDTO
  + listarPedidosAtivos(idUsuario) : List<PedidoCardDTO>
  + listarPedidosHistorico(idUsuario) : List<Pedido>
  + listarPedidosPorStatus(idUsuario, status) : List<Pedido>
}

class "Item_Pedido" as item_pedido {
  - id_item : int <<PK>>
  --
  - id_pedido : int <<FK>>
  - id_servico : int <<FK>>
  - quantidade : int
  - tamanho_papel : String
  - orientacao : Enum ('Retrato', 'Paisagem')
  - frente_verso : boolean
  - tipo_cor : Enum ('Preto e Branco', 'Colorido')
  - observacoes : String
  ==
}

class "Pagamento" as pagamento {
  - id_pagamento : int <<PK>>
  --
  - id_pedido : int <<FK>>
  - metodo : String ('PIX', 'Dinheiro', 'Cartao')
  - status_pagamento : Enum ('Pendente', 'Pago')
  ==
  + registrarPagamento(idPedido, metodo) : void
  + atualizarStatusPagamento(idPagamento, status) : void
}

class "Notificacao" as notificacao {
  - id_notificacao : int <<PK>>
  --
  - id_usuario : int <<FK>>
  - titulo : String
  - mensagem : String
  - lida : boolean
  - data_hora : Datetime
  ==
  + listarNotificacoes(idUsuario) : List<Notificacao>
  + marcarComoLida(idNotificacao) : void
}

class "Horario_Funcionamento" as horario {
  - id_horario : int <<PK>>
  --
  - dia_semana : String
  - manha : String
  - tarde : String
  - noite : String
  ==
  + cadastrarHorario(dados) : void
  + atualizarHorario(id, dados) : void
}

class "Configuracao_Sistema" as config {
  - id_config : int <<PK>>
  --
  - setor_aberto : boolean
  - mensagem_aviso : String
  ==
  + verificarStatusSetor() : boolean
  + alterarStatusSetor(status, mensagem) : void
  + enviarNotificacao(idUsuario, mensagem) : void
  + obterQuadroHorariosCompleto(-) : List<Horario_Funcionamento>
}

' --- Definição dos Relacionamentos ---

' Herança: Estudante e Administrador são tipos de Usuário
usuario <|-- estudante
usuario <|-- admin

' Um Usuário pode ter ZERO ou VÁRIOS Pedidos (1:N)
usuario ||--o{ pedido : "realiza"

' Um Usuário pode receber ZERO ou VÁRIAS Notificações (1:N)
usuario ||--o{ notificacao : "recebe"

' Um Pedido deve ter UM ou VÁRIOS Itens (1:N)
pedido ||--|{ item_pedido : "contém"

' Um Serviço pode estar em ZERO ou VÁRIOS Itens de Pedido (1:N)
servico ||--o{ item_pedido : "é adicionado em"

' Um Pedido pode ter ZERO ou UM Pagamento registrado (1:1)
pedido ||--o| pagamento : "possui"

' O sistema possui vários horários de funcionamento (1:N)
config ||--o{ horario : "possui"

@enduml